<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/welcome_screen_bkgrd"
    android:fillViewport="true"
    tools:context="com.example.android.bwm.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/welcome_scr_desc_text_height"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/welcome_screen_description" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/BMW_description"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/BWM_philosophy"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <RelativeLayout
            android:id="@+id/pick_category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_centerInParent="true"
                android:src="@drawable/welcome_screen_bgrd" />

            <TextView
                android:id="@+id/go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/welcome_scr_button"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>