<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context="com.example.android.bwm.payment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/payment_desc_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:maxLines="5"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:text="@string/payment_desc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="Total due: 5.00 EUR"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/order_confirmation_checkbox"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/terms_and_cond_agreement"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="Pay with Pay pal"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
